--- a/src/App/Styles/index.css
+++ b/src/App/Styles/index.css
@@ -7,7 +7,7 @@
   text-decoration: none;
 }
 body {
-  overflow-x: hidden;
+  overflow: hidden;
   font-family: "Poppins", sans-serif;
 
   /* colors */
