--- a/src/App/Styles/chat.css
+++ b/src/App/Styles/chat.css
@@ -1,5 +1,8 @@
 .chats {
   flex: 0.8;
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
 .chat__header {
   width: 100%;
@@ -30,8 +33,14 @@
 
 .chat__message {
   width: 100%;
-  margin-top: 35px;
-  padding: 0 3%;
+  height: 100vh;
+  margin-top: 5px;
+  padding: 0 2%;
+  overflow: scroll;
+  overflow-x: -y hidden;
+}
+.chat__message::-webkit-scrollbar {
+  display: none;
 }
 .chat__message > .message__info {
   max-width: 500px;
@@ -40,6 +49,8 @@
   background: #f7f7f7;
   border: none;
   border-radius: 6px;
+  margin: 20px 0;
+  border: 1px solid lightgray;
 }
 .message__info .message__top {
   display: flex;
@@ -69,4 +80,38 @@
   font-size: 1rem;
   font-weight: 400;
   padding: 5px 2% 0 5%;
+}
+.chats .chat__addChat {
+  width: 100%;
+  position: absolute;
+  bottom: 68px;
+  left: 0;
+}
+.chat__addChat > form {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+.chat__addChat > form > input {
+  flex: 0.9;
+  padding: 13px 15px;
+  font-size: 1rem;
+  color: var(--black);
+  border: 1px solid var(--black);
+  border-radius: 3px;
+}
+.chat__addChat > form > .addChat__sendButton {
+  flex: 0.075;
+  padding: 10px 0;
+  text-align: center;
+  background: var(--main-color);
+  cursor: pointer;
+  border: none;
+  border-radius: 6px;
+}
+.addChat__sendButton > .icon {
+  color: #fff;
+  font-size: 1.5rem;
 }
