--- a/src/App/Styles/chat.css
+++ b/src/App/Styles/chat.css
@@ -56,6 +56,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
   padding-bottom: 5px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
